[gd_scene format=4 uid="uid://doa8kyxtgr7rs"]

[ext_resource type="Script" uid="uid://36lfnnt68lgl" path="res://main/scripts/pipe.gd" id="1_vjgfa"]
[ext_resource type="TileSet" uid="uid://ckvxux1o3wiur" path="res://assets/tilesets/pipe_glow_tileset.tres" id="3_pefbi"]
[ext_resource type="TileSet" uid="uid://dwgov1ih55w74" path="res://assets/tilesets/pipe_tileset.tres" id="3_vjgfa"]
[ext_resource type="Texture2D" uid="uid://b2je8614rdmtf" path="res://assets/images/pipe_glowmask.png" id="4_24ckd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_84vtl"]
size = Vector2(128, 127.59914)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pefbi"]
texture = ExtResource("4_24ckd")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_24ckd"]
sources/1 = SubResource("TileSetAtlasSource_pefbi")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_84vtl"]
b = Vector2(0, 14.568346)

[node name="Pipe" type="Node2D" unique_id=1310120658]
script = ExtResource("1_vjgfa")

[node name="PipeUpArea" type="Area2D" parent="." unique_id=1418539373]

[node name="PipeUpCollision" type="CollisionShape2D" parent="PipeUpArea" unique_id=1014316424]
position = Vector2(0, 240.1327)
scale = Vector2(1, 3.7599998)
shape = SubResource("RectangleShape2D_84vtl")
debug_color = Color(0.82229614, 0.38410047, 0.3186671, 0.41960785)

[node name="PipeUpTile" type="TileMapLayer" parent="PipeUpArea" unique_id=1282043835]
tile_map_data = PackedByteArray("AAD7/xoAAAAAAAEAAAD7/xsAAAAAAAEAAAD7/xwAAAAAAAEAAAD8/xkAAAAGAAAAABD8/xoAAAAEAAEAABD8/xsAAAAEAAEAABD8/xwAAAAEAAEAABD8/x0AAAAGAAAAADD9/wAAAAADAAAAAED9/wEAAAADAAAAAED9/wIAAAADAAAAAED9/wMAAAADAAAAAED9/wQAAAADAAAAAED9/wUAAAADAAAAAED9/wYAAAADAAAAAED9/wcAAAADAAAAAED9/wgAAAADAAAAAED9/wkAAAADAAAAAED9/woAAAADAAAAAED9/wsAAAADAAAAAED9/wwAAAADAAAAAED9/w0AAAADAAAAAED9/w4AAAADAAAAAED9/w8AAAADAAAAAED9/xAAAAADAAAAAED9/xEAAAADAAAAAED9/xIAAAADAAAAAED9/xMAAAADAAAAAED9/xQAAAADAAAAAED9/xUAAAADAAAAAED9/xYAAAADAAAAAED9/xcAAAADAAAAAGD9/xgAAAACAAAAAGD9/xkAAAAFAAAAABD9/xoAAAAGAAEAABD9/xsAAAAGAAEAABD9/xwAAAAGAAEAABD9/x0AAAAFAAAAADD+/wAAAAAGAAEAABD+/wEAAAAGAAEAABD+/wIAAAAGAAEAABD+/wMAAAAGAAEAABD+/wQAAAAGAAEAABD+/wUAAAAGAAEAABD+/wYAAAAGAAEAABD+/wcAAAAGAAEAABD+/wgAAAAGAAEAABD+/wkAAAAGAAEAABD+/woAAAAGAAEAABD+/wsAAAAGAAEAABD+/wwAAAAGAAEAABD+/w0AAAAGAAEAABD+/w4AAAAGAAEAABD+/w8AAAAGAAEAABD+/xAAAAAGAAEAABD+/xEAAAAGAAEAABD+/xIAAAAGAAEAABD+/xMAAAAGAAEAABD+/xQAAAAGAAEAABD+/xUAAAAGAAEAABD+/xYAAAAGAAEAAAD+/xcAAAAEAAEAAAD+/xgAAAADAAEAAAD+/xkAAAAEAAAAABD+/xoAAAAFAAEAABD+/xsAAAAFAAEAABD+/xwAAAAFAAEAABD+/x0AAAAEAAAAADD//wAAAAAGAAEAABD//wEAAAAGAAEAABD//wIAAAAGAAEAABD//wMAAAAGAAEAABD//wQAAAAGAAEAABD//wUAAAAGAAEAABD//wYAAAAGAAEAABD//wcAAAAGAAEAABD//wgAAAAGAAEAABD//wkAAAAGAAEAABD//woAAAAGAAEAABD//wsAAAAGAAEAABD//wwAAAAGAAEAABD//w0AAAAGAAEAABD//w4AAAAGAAEAABD//w8AAAAGAAEAABD//xAAAAAGAAEAABD//xEAAAAGAAEAABD//xIAAAAGAAEAABD//xMAAAAGAAEAABD//xQAAAAGAAEAABD//xUAAAAGAAEAABD//xYAAAAGAAEAAAD//xcAAAAEAAEAAAD//xgAAAADAAEAAAD//xkAAAADAAAAABD//xoAAAAEAAEAABD//xsAAAAEAAEAABD//xwAAAAEAAEAABD//x0AAAADAAAAADAAAAAAAAAEAAEAABAAAAEAAAAEAAEAABAAAAIAAAAEAAEAABAAAAMAAAAEAAEAABAAAAQAAAAEAAEAABAAAAUAAAAEAAEAABAAAAYAAAAEAAEAABAAAAcAAAAEAAEAABAAAAgAAAAEAAEAABAAAAkAAAAEAAEAABAAAAoAAAAEAAEAABAAAAsAAAAEAAEAABAAAAwAAAAEAAEAABAAAA0AAAAEAAEAABAAAA4AAAAEAAEAABAAAA8AAAAEAAEAABAAABAAAAAEAAEAABAAABEAAAAEAAEAABAAABIAAAAEAAEAABAAABMAAAAEAAEAABAAABQAAAAEAAEAABAAABUAAAAEAAEAABAAABYAAAAEAAEAABAAABcAAAAEAAEAAAAAABgAAAADAAEAAAAAABkAAAACAAAAABAAABoAAAADAAEAABAAABsAAAADAAEAABAAABwAAAADAAEAABAAAB0AAAACAAAAADABAAAAAAADAAEAABABAAEAAAADAAEAABABAAIAAAADAAEAABABAAMAAAADAAEAABABAAQAAAADAAEAABABAAUAAAADAAEAABABAAYAAAADAAEAABABAAcAAAADAAEAABABAAgAAAADAAEAABABAAkAAAADAAEAABABAAoAAAADAAEAABABAAsAAAADAAEAABABAAwAAAADAAEAABABAA0AAAADAAEAABABAA4AAAADAAEAABABAA8AAAADAAEAABABABAAAAADAAEAABABABEAAAADAAEAABABABIAAAADAAEAABABABMAAAADAAEAABABABQAAAADAAEAABABABUAAAADAAEAABABABYAAAADAAEAABABABcAAAADAAEAABABABgAAAADAAEAAAABABkAAAACAAAAABABABoAAAADAAEAABABABsAAAADAAEAABABABwAAAADAAEAABABAB0AAAACAAAAADACAAAAAAABAAAAAHACAAEAAAABAAAAAHACAAIAAAABAAAAAHACAAMAAAABAAAAAHACAAQAAAABAAAAAHACAAUAAAABAAAAAHACAAYAAAABAAAAAHACAAcAAAABAAAAAHACAAgAAAABAAAAAHACAAkAAAABAAAAAHACAAoAAAABAAAAAHACAAsAAAABAAAAAHACAAwAAAABAAAAAHACAA0AAAABAAAAAHACAA4AAAABAAAAAHACAA8AAAABAAAAAHACABAAAAABAAAAAHACABEAAAABAAAAAHACABIAAAABAAAAAHACABMAAAABAAAAAHACABQAAAABAAAAAHACABUAAAABAAAAAHACABYAAAABAAAAAHACABcAAAABAAAAAHACABgAAAABAAAAAHACABkAAAABAAAAABACABoAAAACAAEAABACABsAAAACAAEAABACABwAAAACAAEAABACAB0AAAABAAAAADADABkAAAAAAAAAABADABoAAAABAAEAABADABsAAAABAAEAABADABwAAAABAAEAABADAB0AAAAAAAAAADAEABoAAAAAAAEAABAEABsAAAAAAAEAABAEABwAAAAAAAEAABA=")
tile_set = ExtResource("3_vjgfa")

[node name="PipeUpGlowTile" type="TileMapLayer" parent="PipeUpArea" unique_id=915830473]
tile_map_data = PackedByteArray("AAD+/wAAAAACAAAAAAD+/wEAAAACAAAAAAD+/wIAAAACAAAAAAD+/wMAAAACAAAAAAD+/wQAAAACAAAAAAD+/wUAAAACAAAAAAD+/wYAAAACAAAAAAD+/wcAAAACAAAAAAD+/wgAAAACAAAAAAD+/wkAAAACAAAAAAD+/woAAAACAAAAAAD+/wsAAAACAAAAAAD+/wwAAAACAAAAAAD+/w0AAAACAAAAAAD+/w4AAAACAAAAAAD+/w8AAAACAAAAAAD+/xAAAAACAAAAAAD+/xEAAAACAAAAAAD+/xIAAAACAAAAAAD+/xMAAAACAAAAAAD+/xQAAAACAAAAAAD+/xUAAAACAAAAAAD//xUAAAACAAAAAAD//xQAAAACAAAAAAD//xMAAAACAAAAAAD//xIAAAACAAAAAAD//xEAAAACAAAAAAD//xAAAAACAAAAAAD//w8AAAACAAAAAAD//w4AAAACAAAAAAD//w0AAAACAAAAAAD//wwAAAACAAAAAAD//wsAAAACAAAAAAD//wAAAAACAAAAAAD//wEAAAACAAAAAAD//wIAAAACAAAAAAD//wMAAAACAAAAAAD//wQAAAACAAAAAAD//wUAAAACAAAAAAD//wYAAAACAAAAAAD//wcAAAACAAAAAAD//wgAAAACAAAAAAD//wkAAAACAAAAAAD//woAAAACAAAAAAD9/x0AAAABAAAAADD9/xkAAAABAAAAABD+/xkAAAAAAAAAAAD+/x0AAAAAAAAAACD+/xwAAAAAAAAAAHD+/xsAAAAAAAAAAHD+/xoAAAAAAAAAAHD9/xoAAAACAAAAAAD9/xsAAAACAAAAAAD9/xwAAAACAAAAAAD+/xYAAAACAAAAAAD//xYAAAACAAAAAAA=")
tile_set = ExtResource("3_pefbi")

[node name="PipeDownArea" type="Area2D" parent="." unique_id=49522780]

[node name="PipeDownCollision" type="CollisionShape2D" parent="PipeDownArea" unique_id=1112979322]
position = Vector2(1.9073486e-06, -240.11368)
scale = Vector2(1, 3.7599998)
shape = SubResource("RectangleShape2D_84vtl")
debug_color = Color(0.82229614, 0.38410047, 0.3186671, 0.41960785)

[node name="PipeDownTile" type="TileMapLayer" parent="PipeDownArea" unique_id=49944325]
tile_map_data = PackedByteArray("AAD9////AAADAAAAAGD9//7/AAADAAAAAGD9//3/AAADAAAAAGD9//z/AAADAAAAAGD9//v/AAADAAAAAGD9//r/AAADAAAAAGD9//n/AAADAAAAAGD9//j/AAADAAAAAGD9//f/AAADAAAAAGD9//b/AAADAAAAAGD9//X/AAADAAAAAGD9//T/AAADAAAAAGD9//P/AAADAAAAAGD9//L/AAADAAAAAGD9/+L/AAAFAAAAABD9/+T/AAAGAAEAABD+/+L/AAAEAAAAABD+/+T/AAAFAAEAABD//+L/AAADAAAAABD//+T/AAAEAAEAABAAAOL/AAACAAAAABAAAOT/AAADAAEAABABAOL/AAACAAAAABABAOT/AAADAAEAABABAOP/AAADAAEAABD9/+P/AAAGAAEAABD+/+P/AAAFAAEAABAAAOP/AAADAAEAABD//+P/AAAEAAEAABD9/+X/AAAGAAEAABD9/+b/AAAFAAAAADD9/+f/AAACAAAAAED9/+j/AAADAAAAAGD9/+n/AAADAAAAAGD9/+r/AAADAAAAAGD9/+v/AAADAAAAAGD9/+z/AAADAAAAAGD9/+3/AAADAAAAAGD9/+7/AAADAAAAAGD9/+//AAADAAAAAGD9//D/AAADAAAAAGD9//H/AAADAAAAAGD+/+X/AAAFAAEAABD+/+b/AAAEAAAAADD+/+f/AAADAAEAAAD+/+j/AAAEAAEAAAD+/+n/AAAGAAEAABD+/+r/AAAGAAEAABD+/+v/AAAGAAEAABD+/+z/AAAGAAEAABD+/+3/AAAGAAEAABD+/+7/AAAGAAEAABD+/+//AAAGAAEAABD+//D/AAAGAAEAABD+//H/AAAGAAEAABD+//L/AAAGAAEAABD+//P/AAAGAAEAABD+//T/AAAGAAEAABD+//X/AAAGAAEAABD+//b/AAAGAAEAABD+//f/AAAGAAEAABD+//j/AAAGAAEAABD+//n/AAAGAAEAABD+//r/AAAGAAEAABD+//v/AAAGAAEAABD+//z/AAAGAAEAABD+//3/AAAGAAEAABD+//7/AAAGAAEAABD+////AAAGAAEAABAAAP//AAAEAAEAABAAAP7/AAAEAAEAABAAAP3/AAAEAAEAABAAAPz/AAAEAAEAABAAAPv/AAAEAAEAABAAAPr/AAAEAAEAABAAAPn/AAAEAAEAABAAAPj/AAAEAAEAABAAAPf/AAAEAAEAABAAAPb/AAAEAAEAABAAAPX/AAAEAAEAABAAAPT/AAAEAAEAABAAAPP/AAAEAAEAABAAAPL/AAAEAAEAABAAAPH/AAAEAAEAABAAAPD/AAAEAAEAABAAAO//AAAEAAEAABAAAO7/AAAEAAEAABAAAO3/AAAEAAEAABAAAOz/AAAEAAEAABAAAOv/AAAEAAEAABAAAOr/AAAEAAEAABAAAOn/AAAEAAEAABAAAOj/AAAEAAEAABAAAOf/AAADAAEAAAAAAOb/AAACAAAAADAAAOX/AAADAAEAABABAOX/AAADAAEAABABAOb/AAACAAAAADABAOf/AAADAAEAABABAOj/AAADAAEAABABAOn/AAADAAEAABABAOr/AAADAAEAABABAOv/AAADAAEAABABAOz/AAADAAEAABABAO3/AAADAAEAABABAO7/AAADAAEAABABAO//AAADAAEAABABAPD/AAADAAEAABABAPH/AAADAAEAABABAPL/AAADAAEAABABAPP/AAADAAEAABABAPT/AAADAAEAABABAPX/AAADAAEAABABAPb/AAADAAEAABABAPf/AAADAAEAABABAPj/AAADAAEAABABAPn/AAADAAEAABABAPr/AAADAAEAABABAPv/AAADAAEAABABAPz/AAADAAEAABABAP3/AAADAAEAABABAP7/AAADAAEAABABAP//AAADAAEAABD///3/AAAGAAEAABD///z/AAAGAAEAABD///v/AAAGAAEAABD///r/AAAGAAEAABD///n/AAAGAAEAABD///j/AAAGAAEAABD///f/AAAGAAEAABD///b/AAAGAAEAABD///X/AAAGAAEAABD///T/AAAGAAEAABD///P/AAAGAAEAABD///L/AAAGAAEAABD///H/AAAGAAEAABD///D/AAAGAAEAABD//+//AAAGAAEAABD//+7/AAAGAAEAABD//+3/AAAGAAEAABD//+z/AAAGAAEAABD//+v/AAAGAAEAABD//+r/AAAGAAEAABD//+n/AAAGAAEAABD//+j/AAAEAAEAAAD//+f/AAADAAEAAAD//+b/AAADAAAAADD//+X/AAAEAAEAABD///7/AAAGAAEAABD/////AAAGAAEAABD7/+P/AAAAAAEAACD7/+T/AAAAAAEAACD7/+X/AAAAAAEAACD8/+L/AAAGAAAAABD8/+P/AAAEAAEAABD8/+T/AAAEAAEAABD8/+X/AAAEAAEAABD8/+b/AAAGAAAAADACAOL/AAABAAAAABACAOP/AAACAAEAABACAOT/AAACAAEAABACAOX/AAACAAEAABACAOb/AAABAAAAADADAOL/AAAAAAAAABADAOP/AAABAAEAABADAOT/AAABAAEAABADAOX/AAABAAEAABADAOb/AAAAAAAAADAEAOP/AAAAAAEAABAEAOT/AAAAAAEAABAEAOX/AAAAAAEAABACAP//AAABAAAAAHACAP7/AAABAAAAAHACAP3/AAABAAAAAHACAPz/AAABAAAAAHACAPv/AAABAAAAAHACAPr/AAABAAAAAHACAPn/AAABAAAAAHACAPj/AAABAAAAAHACAPf/AAABAAAAAHACAPb/AAABAAAAAHACAPX/AAABAAAAAHACAPT/AAABAAAAAHACAPP/AAABAAAAAHACAPL/AAABAAAAAHACAPH/AAABAAAAAHACAPD/AAABAAAAAHACAO//AAABAAAAAHACAO7/AAABAAAAAHACAO3/AAABAAAAAHACAOz/AAABAAAAAHACAOv/AAABAAAAAHACAOr/AAABAAAAAHACAOn/AAABAAAAAHACAOj/AAABAAAAAHACAOf/AAABAAAAAHA=")
tile_set = ExtResource("3_vjgfa")

[node name="PipeDownGlowTile" type="TileMapLayer" parent="PipeDownArea" unique_id=587041112]
tile_map_data = PackedByteArray("AAD+/+L/AQAAAAAAABD9/+L/AQABAAAAABD+/+P/AQAAAAAAAHD9/+P/AQACAAAAABD+/+T/AQAAAAAAAHD9/+T/AQACAAAAABD+/+X/AQAAAAAAAHD9/+X/AQACAAAAABD+/+b/AQAAAAAAACD9/+b/AQABAAAAAED//+n/AQACAAAAABD+/+n/AQACAAAAABD//+r/AQACAAAAABD+/+r/AQACAAAAABD//+v/AQACAAAAABD+/+v/AQACAAAAABD//+z/AQACAAAAABD+/+z/AQACAAAAABD//+3/AQACAAAAABD+/+3/AQACAAAAABD//+7/AQACAAAAABD+/+7/AQACAAAAABD//+//AQACAAAAABD+/+//AQACAAAAABD///D/AQACAAAAABD+//D/AQACAAAAABD///H/AQACAAAAABD+//H/AQACAAAAABD///L/AQACAAAAABD+//L/AQACAAAAABD///P/AQACAAAAABD+//P/AQACAAAAABD///T/AQACAAAAABD+//T/AQACAAAAABD///X/AQACAAAAABD+//X/AQACAAAAABD///b/AQACAAAAABD+//b/AQACAAAAABD///f/AQACAAAAABD+//f/AQACAAAAABD///j/AQACAAAAABD+//j/AQACAAAAABD///n/AQACAAAAABD+//n/AQACAAAAABD///r/AQACAAAAABD+//r/AQACAAAAABD///v/AQACAAAAABD+//v/AQACAAAAABD///z/AQACAAAAABD+//z/AQACAAAAABD///3/AQACAAAAABD+//3/AQACAAAAABD///7/AQACAAAAABD+//7/AQACAAAAABD/////AQACAAAAABD+////AQACAAAAABA=")
tile_set = SubResource("TileSet_24ckd")

[node name="ScoreArea" type="Area2D" parent="." unique_id=104913842]
visible = false
collision_layer = 2
collision_mask = 2

[node name="ScoreCollision" type="CollisionShape2D" parent="ScoreArea" unique_id=940501914]
scale = Vector2(1, 44.48)
shape = SubResource("SegmentShape2D_84vtl")
debug_color = Color(1, 1, 1, 1)
metadata/_edit_lock_ = true

[connection signal="area_exited" from="ScoreArea" to="." method="_on_score_area_exited"]
